deploy: bd25404bbfac39162374ad97c1a13e38401ffa46

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>Incubyte Blog</title>
 <base href=https://incubyteco.github.io/>
 <meta name=author content="Incubyte">
-<meta name=generator content="Hugo 0.88.1">
+<meta name=generator content="Hugo 0.89.2">
 <link rel=preconnect href=https://fonts.googleapis.com>
 <link rel=preconnect href=https://fonts.gstatic.com crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@700&display=swap" rel=stylesheet>
@@ -127,6 +127,19 @@ Resources
 <p class=card-text>Quality is usually an implicit requirement when it comes to developing software. Users ask for a beautiful UI, outstanding performance, and the functionality they need, but quality is never on the list - it is just expected!</p>
 <a href=https://incubyteco.github.io/blog/why-incubyte/ title=" -
                         Why Incubyte?" class="btn btn-main-art btn-primary">Read more</a>
+</div>
+</article>
+</div>
+<div class="col-lg-4 col-sm-6 mb-5">
+<article class="card border-0">
+<a href=https://incubyteco.github.io/blog/kickstart-checklist/>
+<img src=/images/2021/checklist.jpg alt="Project Kickstart Checklist" class="mb-1 card-img rounded-lg mb-4">
+</a>
+<div class="card-body p-0">
+<h3><a href=https://incubyteco.github.io/blog/kickstart-checklist/ title="Project Kickstart Checklist" class=post-title>Project Kickstart Checklist</a></h3>
+<span class="badge rounded-pill bg-dark"> <a class=text-white href=/tags/playbook>Playbook</a></span>
+<p class=card-text>The Checklist Manifesto by Atul Gawande, walks us through the benefits of the humble checklist. He talks about how checklists of &ldquo;dumb stuff&rdquo; can save us from disasters in life and death situations.
+</p>
 </div>
 </article>
 </div>
@@ -281,22 +294,6 @@ This assessment is the first step in our recruiting process and will be followed
 <h3><a href=https://incubyteco.github.io/blog/notalltestsarethesame/ title="Not All Tests are the Same" class=post-title>Not All Tests are the Same</a></h3>
 <span class="badge rounded-pill bg-dark"> <a class=text-white href=/tags/software-craftsmanship>Software Craftsmanship</a></span>
 <p class=card-text>On multiple occasions, I have worked on projects where I learned how critical testing is and that not all tests are the same.
-</p>
-</div>
-</article>
-</div>
-<div class="col-lg-4 col-sm-6 mb-5">
-<article class="card border-0">
-<a href=https://incubyteco.github.io/blog/remote-onboarding-and-immersion/>
-<img src=/images/2021/05/1_Coverpage.jpg alt="Remote Onboarding & Immersion at Incubyte" class="mb-1 card-img rounded-lg mb-4">
-</a>
-<div class="card-body p-0">
-<h3><a href=https://incubyteco.github.io/blog/remote-onboarding-and-immersion/ title="Remote Onboarding & Immersion at Incubyte" class=post-title>Remote Onboarding & Immersion at Incubyte</a></h3>
-<span class="badge rounded-pill bg-dark"> <a class=text-white href=/tags/careers>Careers</a></span>
-<span class="badge rounded-pill bg-dark"> <a class=text-white href=/tags/jobs>Jobs</a></span>
-<span class="badge rounded-pill bg-dark"> <a class=text-white href=/tags/playbook>Playbook</a></span>
-<span class="badge rounded-pill bg-dark"> <a class=text-white href=/tags/getting-started>Getting Started</a></span>
-<p class=card-text>Employee onboarding is the important process of introducing newly hired employees to the organisation. It is everything that leads up to the employee&rsquo;s total immersion into the organisation&rsquo;s culture.
 </p>
 </div>
 </article>
