deploy: 515dd4ea354ed790e68b991f8167e6517e1c96c8

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>Incubyte Blog</title>
 <base href=https://incubyteco.github.io/>
 <meta name=author content="Incubyte">
-<meta name=generator content="Hugo 0.89.4">
+<meta name=generator content="Hugo 0.91.2">
 <link rel=preconnect href=https://fonts.googleapis.com>
 <link rel=preconnect href=https://fonts.gstatic.com crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@700&display=swap" rel=stylesheet>
@@ -127,6 +127,22 @@ Resources
 <p class=card-text>Quality is usually an implicit requirement when it comes to developing software. Users ask for a beautiful UI, outstanding performance, and the functionality they need, but quality is never on the list - it is just expected!</p>
 <a href=https://incubyteco.github.io/blog/why-incubyte/ title=" -
                         Why Incubyte?" class="btn btn-main-art btn-primary">Read more</a>
+</div>
+</article>
+</div>
+<div class="col-lg-4 col-sm-6 mb-5">
+<article class="card border-0">
+<a href=https://incubyteco.github.io/blog/devops-assessment/>
+<img src=/images/2021/09/laptop-plant.jpg alt="Incubyte DevOps Assessment" class="mb-1 card-img rounded-lg mb-4">
+</a>
+<div class="card-body p-0">
+<h3><a href=https://incubyteco.github.io/blog/devops-assessment/ title="Incubyte DevOps Assessment" class=post-title>Incubyte DevOps Assessment</a></h3>
+<span class="badge rounded-pill bg-dark"> <a class=text-white href=/tags/careers>Careers</a></span>
+<span class="badge rounded-pill bg-dark"> <a class=text-white href=/tags/software-craftsmanship>Software Craftsmanship</a></span>
+<span class="badge rounded-pill bg-dark"> <a class=text-white href=/tags/devops>DevOps</a></span>
+<p class=card-text>Hello there, Welcome to the Incubyte DevOps Assessment!
+Through this assessment, we want to evaluate how well you can work with CI/CD tools across the board.
+</p>
 </div>
 </article>
 </div>
@@ -367,29 +383,16 @@ This assessment is the first step in our recruiting process and will be followed
 </div>
 </article>
 </div>
-<div class="col-lg-4 col-sm-6 mb-5">
-<article class="card border-0">
-<a href=https://incubyteco.github.io/blog/do-not-get-so-busy-that-you-stop-learning/>
-<img src="https://images.unsplash.com/photo-1510751190565-de07085fcad6?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=2000&fit=max&ixid=eyJhcHBfaWQiOjExNzczfQ" alt="Do not Get so busy that you stop learning" class="mb-1 card-img rounded-lg mb-4">
-</a>
-<div class="card-body p-0">
-<h3><a href=https://incubyteco.github.io/blog/do-not-get-so-busy-that-you-stop-learning/ title="Do not Get so busy that you stop learning" class=post-title>Do not Get so busy that you stop learning</a></h3>
-<span class="badge rounded-pill bg-dark"> <a class=text-white href=/tags/97-things-not-to-do>97 Things Not To Do</a></span>
-<p class=card-text>Learning is the most vital part of a software developer&rsquo;s life. Being so busy that one stops learning is neither desirable nor helpful to one&rsquo;s career.
-</p>
-</div>
-</article>
-</div>
 <div class=col-12>
 <ul class="pagination pagination-default">
 <li class="page-item disabled">
-<a href=# aria-disabled=true aria-label=First class=page-link role=button tabindex=-1><span aria-hidden=true>&#171;&#171;</span></a>
+<a aria-disabled=true aria-label=First class=page-link role=button tabindex=-1><span aria-hidden=true>&#171;&#171;</span></a>
 </li>
 <li class="page-item disabled">
-<a href=# aria-disabled=true aria-label=Previous class=page-link role=button tabindex=-1><span aria-hidden=true>&#171;</span></a>
+<a aria-disabled=true aria-label=Previous class=page-link role=button tabindex=-1><span aria-hidden=true>&#171;</span></a>
 </li>
 <li class="page-item active">
-<a href=# aria-current=page aria-label="Page 1" class=page-link role=button>1</a>
+<a aria-current=page aria-label="Page 1" class=page-link role=button>1</a>
 </li>
 <li class=page-item>
 <a href=/page/2/ aria-label="Page 2" class=page-link role=button>2</a>
