deploy: b1ee40fc301a5ccf51f3adf8646625b9f52363e1

--- a/search/index.html
+++ b/search/index.html
@@ -1480,11 +1480,11 @@ if (!doNotTrack) {
       },
       
       "https:\/\/blog.incubyte.co\/blog\/global-case-study\/": {
-          "title": "Taking a Mental Healthcare Solution Global",
+          "title": "Incubyte Enables Global Healthcare Platform to Expand to 52+ Countries",
           "tags": ["Case Study",],
           "authors":["Deepshikha Pingle","Utsav Parmar","Abhishek Keshri",],
-          "summary":"Making Mental Healthcare Accessible by Expanding the Solution Globally and Providing a Personalized Customer Experience",
-          "content":"Making Mental Healthcare Accessible by Expanding the Solution Globally and Providing a Personalized Customer Experience\n",
+          "summary":"Making Mental Healthcare Accessible and Providing a Personalized Customer Experience",
+          "content":"Making Mental Healthcare Accessible and Providing a Personalized Customer Experience\n",
           "image":"/images/2023/SH-case-study/SH-banner-blog.jpg",
           "date": "January 30, 2023",
           "url": "https://blog.incubyte.co/blog/global-case-study/"
