deploy: f86bb356b7ad3d3785c56bdacfe3c43f16d73b94

--- a/index.html
+++ b/index.html
@@ -694,7 +694,7 @@
                 <article class="card border-0">
                     
                     <a href="https://blog.incubyte.co/blog/architecture-insights-from-gids-2025/">
-                        <img src="/images/2025/architecture-insights-from-gids-2025/architecture-insights.png" alt="Beyond Blueprints: Architecture Insights from GIDS 2025" class="mb-1 card-img rounded-lg mb-4">
+                        <img src="/images/2025/architecture-insights-from-gids-2025/architecture-insights.jpg" alt="Beyond Blueprints: Architecture Insights from GIDS 2025" class="mb-1 card-img rounded-lg mb-4">
                     </a>
                     
                     <div class="card-body p-0">
